Add Isaac ROS packages for camera-based terrain segmentation
Core Isaac ROS packages cloned (bare metal, not Docker):
- isaac_ros_common (NITROS infrastructure, build utilities)
- isaac_ros_dnn_inference (TensorRT inference for SegFormer-B0)
- isaac_ros_image_pipeline (VPI-accelerated image preprocessing)

These provide GPU-accelerated camera segmentation for terrain classification.

Updates:
- Clone Isaac ROS packages to tank_ws/src/external/
- Update EXTERNAL_PACKAGES.md with Isaac ROS setup instructions
- Update .gitignore to exclude Isaac ROS repos (git cloned, not submodules)
- Update tank_ws/README.md:
  * Add Isaac ROS to external packages list
  * Add Isaac ROS dependencies (VPI, TensorRT)
  * Update build commands to include Isaac ROS
  * Update Phase 1 status (Isaac ROS packages added)
  * Reorganize phases to merge perception into Phase 2

Why bare metal (not Docker):
- Direct hardware access (camera, CAN, GNSS, LiDAR)
- Seamless integration with existing tank_ws
- Lower latency for real-time obstacle avoidance
- Simpler production deployment

Deferred to Phase 4:
- isaac_ros_nvblox (3D reconstruction) - for Isaac Sim integration
  after tank is driving

JetPack 6.2.1 provides:
- CUDA 12.6, TensorRT 10.3, VPI 3.2
- Optimal performance for Isaac ROS inference

--- a/tank_ws/src/external/.gitignore
+++ b/tank_ws/src/external/.gitignore
@@ -8,3 +8,9 @@ ublox_dgnss/
 patchwork-plusplus/
 odrive_ros2_control/
 
+# Isaac ROS packages
+isaac_ros_common/
+isaac_ros_dnn_inference/
+isaac_ros_image_pipeline/
+isaac_ros_nvblox/
+
