--- a/tank_ws/src/tank_control/config/odrive_params.yaml
+++ b/tank_ws/src/tank_control/config/odrive_params.yaml
@@ -10,7 +10,7 @@ odrive_interface_node:
     # Physical parameters
     wheel_radius: 0.10    # meters (adjust to your actual wheel diameter)
     track_width: 0.60     # meters (600mm per your tank specs)
-    encoder_cpr: 8192     # Encoder counts per revolution
+    encoder_cpr: 2048     # Encoder counts per revolution (detected from ODrive)
     
     # Velocity limits
     max_vel: 1.5          # Maximum linear velocity (m/s)
@@ -18,7 +18,8 @@ odrive_interface_node:
     
     # ODrive motor limits
     current_limit: 30.0   # Motor current limit (Amps)
-    velocity_limit: 20.0  # Motor velocity limit (turns/s)
+    velocity_limit: 100.0 # Motor velocity limit (turns/s) - 6000 RPM with 13:1 gearbox
+    vel_ramp_rate: 10.0   # Velocity ramp rate (turns/s^2) - 3-15 recommended
     
     # Safety
     enable_watchdog: true
