--- a/.gitignore
+++ b/.gitignore
@@ -1,75 +1,53 @@
-# ROS2 Build Artifacts
-tank_ws/build/
-tank_ws/install/
-tank_ws/log/
-isaac_ros_ws/build/
-isaac_ros_ws/install/
-isaac_ros_ws/log/
-
 # Python
 __pycache__/
 *.py[cod]
 *$py.class
 *.so
 .Python
-venv/
-env/
+*.egg-info/
+dist/
+build/
 
-# C++
-*.o
-*.a
-*.so
-*.dylib
-*.exe
-*.out
-*.app
-*.gch
-*.pch
+# ROS2
+tank_ws/install/
+tank_ws/build/
+tank_ws/log/
+*.bag
+*.db3
 
-# IDEs
+# IDE
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
 
-# Data (large files - use Git LFS if needed)
-data/rosbags/**/*.db3
-data/rosbags/**/*.mcap
-data/segmentation_training/images/**/*.jpg
-data/segmentation_training/images/**/*.png
-
-# Models (large files)
-*.engine
-*.onnx
-*.pth
-*.pt
-*.h5
-
-# Logs
-*.log
-*.bag
-
 # OS
 .DS_Store
 Thumbs.db
 
+# Logs
+*.log
+log/
+
 # Temporary files
 *.tmp
 *.bak
-*.backup
+*.orig
 
-# Calibration (may want to track some)
-# Uncomment if you want to ignore all calibration files
-# data/camera_calibration/*.yaml
+# Compiled files
+*.o
+*.a
+*.out
 
-# Documentation builds
-docs/_build/
-docs/build/
+# Gazebo
+.gazebo/
 
-# Docker volumes
-docker/volumes/
+# Mesh files (optional - uncomment if meshes are too large)
+# *.stl
+# *.dae
 
-# Keep empty directories
-!**/.gitkeep
-
+# Credentials (if any)
+*.pem
+*.key
+credentials/
