--- a/tank_ws/src/tank_control/config/odrive_params.yaml
+++ b/tank_ws/src/tank_control/config/odrive_params.yaml
@@ -7,10 +7,11 @@ odrive_interface_node:
     axis_left: 0   # ODrive axis 0 for left motor
     axis_right: 1  # ODrive axis 1 for right motor
     
-    # Physical parameters
-    wheel_radius: 0.10    # meters (adjust to your actual wheel diameter)
-    track_width: 0.60     # meters (600mm per your tank specs)
-    encoder_cpr: 2048     # Encoder counts per revolution (verified from ODrive hardware)
+    # Physical parameters (verified from hardware)
+    wheel_radius: 0.058   # meters (58mm actual wheel radius)
+    track_width: 0.60     # meters (600mm track width between wheel centers)
+    encoder_cpr: 2048     # Encoder counts per revolution at motor (verified from ODrive)
+    gear_ratio: 12.0      # 12:1 gearbox reduction ratio (motor turns 12x for 1 wheel turn)
     
     # Velocity limits
     max_vel: 1.5          # Maximum linear velocity (m/s)
