Increase ODrive watchdog timeout from 0.2s to 1.0s
0.2s timeout was too aggressive during startup - axes would
enter CLOSED_LOOP_CONTROL and watchdog would expire before first
feed. 1.0s provides comfortable margin while still being safe.

--- a/tank_ws/src/tank_control/config/odrive_params.yaml
+++ b/tank_ws/src/tank_control/config/odrive_params.yaml
@@ -24,7 +24,7 @@ odrive_interface_node:
     
     # Safety
     enable_watchdog: true
-    watchdog_timeout: 0.2  # seconds - stop motors if no command for this long
+    watchdog_timeout: 1.0  # seconds - stop motors if no command for this long (increased for startup reliability)
     
     # Control timing
     control_rate: 50.0    # Hz - velocity command rate
