--- a/tank_ws/src/tank_navigation/CMakeLists.txt
+++ b/tank_ws/src/tank_navigation/CMakeLists.txt
@@ -7,11 +7,21 @@ endif()
 
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
+find_package(rclpy REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(sensor_msgs REQUIRED)
+find_package(std_msgs REQUIRED)
 
 # Install directories
 install(DIRECTORY
   launch config
   DESTINATION share/${PROJECT_NAME}/
+)
+
+# Install Python executables
+install(PROGRAMS
+  tank_navigation/gps_waypoint_follower.py
+  DESTINATION lib/${PROJECT_NAME}
 )
 
 ament_package()
