--- a/tank_ws/src/tank_navigation/package.xml
+++ b/tank_ws/src/tank_navigation/package.xml
@@ -10,8 +10,11 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>rclcpp</depend>
+  <depend>rclpy</depend>
   <depend>nav2_core</depend>
   <depend>geometry_msgs</depend>
+  <depend>sensor_msgs</depend>
+  <depend>std_msgs</depend>
   <depend>tank_msgs</depend>
   <export>
     <build_type>ament_cmake</build_type>
