--- a/tank_ws/src/tank_navigation/package.xml
+++ b/tank_ws/src/tank_navigation/package.xml
@@ -3,7 +3,7 @@
 <package format="3">
   <name>tank_navigation</name>
   <version>0.1.0</version>
-  <description>Navigation: DWA planner + reverse mode</description>
+  <description>Autonomous navigation stack with Nav2 for tracked vehicle</description>
   <maintainer email="your.email@example.com">Your Name</maintainer>
   <license>MIT</license>
 
@@ -11,11 +11,28 @@
 
   <depend>rclcpp</depend>
   <depend>rclpy</depend>
-  <depend>nav2_core</depend>
   <depend>geometry_msgs</depend>
   <depend>sensor_msgs</depend>
   <depend>std_msgs</depend>
   <depend>tank_msgs</depend>
+  
+  <!-- Nav2 dependencies -->
+  <exec_depend>navigation2</exec_depend>
+  <exec_depend>nav2_bringup</exec_depend>
+  <exec_depend>nav2_common</exec_depend>
+  <exec_depend>nav2_costmap_2d</exec_depend>
+  <exec_depend>nav2_dwb_controller</exec_depend>
+  <exec_depend>nav2_navfn_planner</exec_depend>
+  <exec_depend>nav2_bt_navigator</exec_depend>
+  <exec_depend>nav2_behaviors</exec_depend>
+  <exec_depend>nav2_waypoint_follower</exec_depend>
+  <exec_depend>nav2_lifecycle_manager</exec_depend>
+  <exec_depend>nav2_velocity_smoother</exec_depend>
+  
+  <!-- Integration -->
+  <exec_depend>tank_sensors</exec_depend>
+  <exec_depend>tank_localization</exec_depend>
+  <exec_depend>point_lio</exec_depend>
   <export>
     <build_type>ament_cmake</build_type>
   </export>
