--- a/tank_ws/src/tank_description/CMakeLists.txt
+++ b/tank_ws/src/tank_description/CMakeLists.txt
@@ -10,7 +10,7 @@ find_package(rclcpp REQUIRED)
 
 # Install directories
 install(DIRECTORY
-  launch config
+  launch config urdf
   DESTINATION share/${PROJECT_NAME}/
 )
 
