--- a/tank_ws/src/tank_control/package.xml
+++ b/tank_ws/src/tank_control/package.xml
@@ -7,7 +7,8 @@
   <maintainer email="your.email@example.com">Your Name</maintainer>
   <license>MIT</license>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_python</buildtool_depend>
+  <buildtool_depend>python3-setuptools</buildtool_depend>
 
   <depend>rclpy</depend>
   <depend>geometry_msgs</depend>
@@ -15,6 +16,7 @@
   <depend>nav_msgs</depend>
   <depend>std_msgs</depend>
   <depend>std_srvs</depend>
+  <depend>twist_mux</depend>
 
   <!-- IMPORTANT: Use odrive v0.5.4 with FW v0.5.6 -->
   <!-- Install with: pip3 install odrive==0.5.4 -->
@@ -24,6 +26,6 @@
   <test_depend>ament_lint_common</test_depend>
 
   <export>
-    <build_type>ament_cmake</build_type>
+    <build_type>ament_python</build_type>
   </export>
 </package>
