--- a/tank_ws/src/tank_navigation/config/nav2/nav2_params.yaml
+++ b/tank_ws/src/tank_navigation/config/nav2/nav2_params.yaml
@@ -203,7 +203,11 @@ global_costmap:
       robot_radius: 0.5
       resolution: 0.05
       track_unknown_space: true
-      plugins: ["static_layer", "obstacle_layer", "inflation_layer"]
+      # Rolling window for GPS waypoint navigation (no pre-made map)
+      rolling_window: true
+      width: 50  # 50m x 50m rolling window
+      height: 50
+      plugins: ["obstacle_layer", "inflation_layer"]  # Removed static_layer for rolling mode
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
         enabled: true
@@ -228,9 +232,6 @@ global_costmap:
           raytrace_min_range: 0.0
           obstacle_max_range: 15.0
           obstacle_min_range: 0.0
-      static_layer:
-        plugin: "nav2_costmap_2d::StaticLayer"
-        map_subscribe_transient_local: true
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
@@ -303,8 +304,8 @@ velocity_smoother:
     feedback: "OPEN_LOOP"
     max_velocity: [0.5, 0.0, 1.0]
     min_velocity: [-0.3, 0.0, -1.0]
-    max_accel: [0.3, 0.0, 1.0]
-    max_decel: [-0.5, 0.0, -2.0]
+    max_accel: [1.5, 0.0, 3.0]  # Increased from 0.3 -> 1.5 m/s² for faster response
+    max_decel: [-2.0, 0.0, -4.0]  # Increased from -0.5 -> -2.0 m/s² for faster stopping
     odom_topic: "/Odometry"
     odom_duration: 0.1
     deadband_velocity: [0.0, 0.0, 0.0]
