Clean up repository for presentation
- Move development notes to archive/dev_notes/
- Move Cursor IDE rules to archive/cursor_rules/
- Remove generated TF frame files (*.gv, *.pdf)
- Remove duplicate ecam25_drivers_deploy/ (identical to drivers/)
- Update .gitignore to exclude generated frame files
- Update README.md with current project status

--- a/.gitignore
+++ b/.gitignore
@@ -60,5 +60,9 @@ log/
 credentials/
 scripts/rover_config.json
 
+# Generated TF frame visualizations
+*.gv
+frames_*.pdf
+
 # External repos (cloned, not owned)
 tank_ws/src/point_lio/
