--- a/tank_ws/src/tank_navigation/config/nav2/nav2_params.yaml
+++ b/tank_ws/src/tank_navigation/config/nav2/nav2_params.yaml
@@ -75,7 +75,7 @@ bt_navigator_navigate_to_pose_rclcpp_node:
 controller_server:
   ros__parameters:
     use_sim_time: false
-    controller_frequency: 20.0
+    controller_frequency: 10.0
     min_x_velocity_threshold: 0.001
     min_y_velocity_threshold: 0.0  # Not used for differential/skid-steer
     min_theta_velocity_threshold: 0.001
@@ -94,7 +94,7 @@ controller_server:
     general_goal_checker:
       stateful: true
       plugin: "nav2_controller::SimpleGoalChecker"
-      xy_goal_tolerance: 2.5  # 2.5m tolerance for GPS waypoints (no RTK)
+      xy_goal_tolerance: 0.5  # Reduced from 2.5m to 0.5m
       yaw_goal_tolerance: 0.5  # ~29 degrees (relaxed for GPS navigation)
     
     # DWB (Dynamic Window Approach) Controller
@@ -104,19 +104,19 @@ controller_server:
       debug_trajectory_details: false
       min_vel_x: 0.0
       min_vel_y: 0.0
-      max_vel_x: 0.5  # Adjust based on your tank's max speed
+      max_vel_x: 2.0  # Increased for tank's actual speed capability
       max_vel_y: 0.0  # No lateral movement for tracks
-      max_vel_theta: 1.0  # Adjust for turn rate
+      max_vel_theta: 1.5  # Increased turn rate
       min_speed_xy: 0.0
-      max_speed_xy: 0.5
+      max_speed_xy: 2.0  # Match max_vel_x
       min_speed_theta: 0.0
       # Acceleration limits (important for tracked vehicle!)
-      acc_lim_x: 0.3  # Gradual acceleration to prevent track slip
+      acc_lim_x: 0.8  # Faster acceleration
       acc_lim_y: 0.0
-      acc_lim_theta: 1.0
-      decel_lim_x: -0.5
+      acc_lim_theta: 1.5
+      decel_lim_x: -1.0  # Faster deceleration
       decel_lim_y: 0.0
-      decel_lim_theta: -2.0
+      decel_lim_theta: -2.5
       # Trajectory generation
       vx_samples: 20
       vy_samples: 0  # No lateral samples for differential
@@ -151,8 +151,8 @@ local_costmap:
       robot_base_frame: base_link
       use_sim_time: false
       rolling_window: true
-      width: 5
-      height: 5
+      width: 8
+      height: 8
       resolution: 0.05
       robot_radius: 0.5  # Conservative for tracked vehicle width
       plugins: ["voxel_layer", "inflation_layer"]
@@ -272,7 +272,7 @@ behavior_server:
       plugin: "nav2_behaviors/DriveOnHeading"
     wait:
       plugin: "nav2_behaviors/Wait"
-    global_frame: odom
+    global_frame: map
     robot_base_frame: base_link
     transform_tolerance: 0.1
     use_sim_time: false
@@ -302,8 +302,8 @@ velocity_smoother:
     smoothing_frequency: 20.0
     scale_velocities: false
     feedback: "OPEN_LOOP"
-    max_velocity: [0.5, 0.0, 1.0]
-    min_velocity: [-0.3, 0.0, -1.0]
+    max_velocity: [2.0, 0.0, 1.5]  # Increased linear to 2.0 m/s, angular to 1.5 rad/s
+    min_velocity: [-1.0, 0.0, -1.5]  # Increased reverse speed
     max_accel: [1.5, 0.0, 3.0]  # Increased from 0.3 -> 1.5 m/s² for faster response
     max_decel: [-2.0, 0.0, -4.0]  # Increased from -0.5 -> -2.0 m/s² for faster stopping
     odom_topic: "/Odometry"
